Add realtime satellites and position interpolation